statum-macros/tests/ui/invalid_legacy_superstate.stderr
error[E0425]: cannot find type `TaskMachineSuperState` in this scope
  --> tests/ui/invalid_legacy_superstate.rs:53:17
   |
53 |     let _state: TaskMachineSuperState = Row { status: "draft" }
   |                 ^^^^^^^^^^^^^^^^^^^^^ not found in this scope
